--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "angular2-webpack-boilerplate",
+  "name": "webpack-typescript-babel-karma-coverage-sass-boilerplate",
   "version": "1.0.0",
-  "description": "A boilerplate for Angular 2 and Webpack",
-  "keywords": [
-    "angular2",
+  "description": "A boilerplate for Webpack, TypeScript, Babel, Karma (with html coverage report), SASS",
+  "keywords": [  
     "webpack",
     "typescript",
+    "babel",
+    "karma",
+    "coverage",
+    "sass",
     "boilerplate",
     "starter"
   ],
-  "author": "Valentin Nazarov <rusarmy@gmail.com>",
+  "author": "Dmitry Grushin <ds160607@gmail.com>",
   "license": "MIT",
   "directories": {
     "test": "tests"
@@ -18,9 +21,9 @@
     "clean": "rimraf ./node_modules ./docs ./typings ./coverage ./dist",
     "clean:dist": "rimraf ./dist",
     "lint": "npm run lint:ts && npm run lint:sass",
-    "lint:ts": "tslint **/*.ts --exclude node_modules",
+    "lint:ts": "tslint src/**/*.ts --exclude node_modules",
     "lint:sass": "sass-lint",
-    
+    "pretest": "npm run lint",
     "test": "karma start",
     "posttest": "npm run coverage",
     "coverage": "npm run coverage:remap && npm run coverage:report",
@@ -33,8 +36,7 @@
     "docs:kss": "kss --source ./src --destination ./docs/styleguide",
     "start": "webpack-dev-server --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base ./dist"
   },
-  "devDependencies": {    
-    "awesome-typescript-loader": "^1.1.1",
+  "devDependencies": {
     
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
